# Leakage-Safe-EEG-ML-Benchmark-for-Dementia-Classification

./: .gitignore  METHODOLOGY.md  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: base.yaml  classifiers.yaml  features.yaml  preprocessing.yaml  selection.yaml
scripts/: __init__.py  _config.py  describe_pipeline.py  run_baselines.py  run_experiment.py  run_interpretation.py  run_staged_benchmark.py
src/eeg_benchml/: __init__.py  constants.py  pipeline.py
src/eeg_benchml/baselines/: __init__.py  recipes.py
src/eeg_benchml/epoching/: __init__.py  augmentation.py  rejection.py  segment.py
src/eeg_benchml/evaluation/: __init__.py  aggregation.py  loso.py  metrics.py  uncertainty.py
src/eeg_benchml/features/: __init__.py  complexity.py  connectivity.py  extractor.py  graph.py  spectral.py
src/eeg_benchml/interpretation/: __init__.py  permutation.py  regions.py
src/eeg_benchml/models/: __init__.py  calibration.py  classifiers.py
src/eeg_benchml/preprocessing/: __init__.py  asr.py  filtering.py  ica.py  pipeline.py
src/eeg_benchml/selection/: __init__.py  selector.py
src/eeg_benchml/utils/: __init__.py  io.py  logging.py  seeding.py  timing.py
tests/: test_aggregation.py  test_constants.py  test_features_shapes.py  test_interpretation.py  test_selection.py
